welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: value % is not a member of String
      setCouleurBrosse(T((j+m)% T.lenght))
                              ^Array2:19: error: value lenght is not a member of Array[java.awt.Color]
      setCouleurBrosse(T((j+m)% T.lenght))
                                  ^